tests/positive/pr118d_string_length_attribute.safe
-- Test: pr118d_string_length_attribute
-- Description: String `.length` is part of the PR11.8d buildable subset.
-- Expected: ACCEPT

package pr118d_string_length_attribute

   function measure (name : string) returns integer

      return name.length
