tests/negative/neg_pr118d_string_discriminant.safe
-- Test: neg_pr118d_string_discriminant
-- Description: String discriminants remain deferred after the PR11.8d runtime/lifetime chunk.
-- Expected: REJECT unsupported_source_construct

package neg_pr118d_string_discriminant

   type payload (tag : string) is record
      value : integer;
